# AUBO_i5

./: README.md
aubo_driver/: CMakeLists.txt
aubo_planner/: CMakeLists.txt
aubo_robot/aubo_driver/include/aubo_driver/: AuboRobotMetaType.h  auboparser.h  communicationmatetype.h  gparser.h  ikfunc.h  internalMateType.h  nc_move.h  protoencodedecode.h  robotcommon.pb.h  robotcommunication.pb.h  robotcommunicationclient.h  robotcontrolservices.h  robotioservice.h  robotmovecondition.pb.h  robotmoveservice.h  robotutilservice.h  serviceinterface.h
aubo_robot/aubo_driver/lib/lib64/aubocontroller/: libaubo_sdk_d.so.2.5
aubo_robot/aubo_driver/src/: aubo_driver.cpp
aubo_robot/aubo_i5_moveit_config/: CMakeLists.txt
aubo_robot/aubo_i5_moveit_config/config/: joint_limits.yaml
aubo_robot/aubo_i5_moveit_config/launch/: ompl_planning_pipeline.launch.xml
aubo_robot/aubo_i5_moveit_config/scripts/: moveit_cartesian_demo.py  moveit_circle_demo.py  probot_demo.py  shagou9000.py  shagou9100.py
aubo_robot/aubo_planner/: CMakeLists.txt
